syntax = "proto3";

option java_package = "com.example.tasky";
option java_multiple_files = true;

message UserPreferences {
  string accessToken = 1;
  string refreshToken = 2;
  string accessTokenExpirationTimestamp = 3;
  string userId = 4;
  string userName = 5;
  string email = 6;
  bool hasSeenNotificationPrompt = 7;
  int32 sessionCount = 8;
}